samples/_failures_safe/1761455162_b1846a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c6fed03b.c: In function ‘next_token’:
./samples/SAFE/__tmp_c6fed03b.c:142:9: error: expected expression at end of input
  142 |         token.value[
      |         ^~~~~
./samples/SAFE/__tmp_c6fed03b.c:142:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c6fed03b.c:142:9: error: expected declaration or statement at end of input
